// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-label Should render label with args { required: false, colon: false, identifier: 'identifier' } 1`] = `
<mg-label>
  <mock:shadow-root>
    <label class="mg-label" htmlfor="identifier">
      <slot></slot>
    </label>
  </mock:shadow-root>
  mg-label
</mg-label>
`;

exports[`mg-label Should render label with args { required: false, colon: true, identifier: 'identifier' } 1`] = `
<mg-label>
  <mock:shadow-root>
    <label class="mg-label" htmlfor="identifier">
      <slot></slot>
      :
    </label>
  </mock:shadow-root>
  mg-label
</mg-label>
`;

exports[`mg-label Should render label with args { required: true, colon: false, identifier: 'identifier' } 1`] = `
<mg-label>
  <mock:shadow-root>
    <label class="mg-label" htmlfor="identifier">
      <slot></slot>
      <span class="is-asterisk">
        *
      </span>
    </label>
  </mock:shadow-root>
  mg-label
</mg-label>
`;

exports[`mg-label Should render label with args { required: true, colon: true, identifier: 'identifier' } 1`] = `
<mg-label>
  <mock:shadow-root>
    <label class="mg-label" htmlfor="identifier">
      <slot></slot>
      <span class="is-asterisk">
        *
      </span>
      :
    </label>
  </mock:shadow-root>
  mg-label
</mg-label>
`;
